--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
+  
 }
 
 #general{
@@ -8,5 +9,5 @@
     margin-top:50px;
     width:960; 
     height: 800;
-    background: red !important ;
+    background: rgba(10, 55, 124, 0.397) !important ;
 }
